--- a/Jupyter/distill.ipynb
+++ b/Jupyter/distill.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "acf524eb",
    "metadata": {},
    "outputs": [
@@ -156,8 +156,8 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7897\"\n",
-    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7897\"\n",
+    "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7890\"\n",
+    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7890\"\n",
     "\n",
     "import torch\n",
     "from transformers import BertModel, DistilBertModel, DistilBertForQuestionAnswering\n",
@@ -297,6 +297,77 @@
     "    \n",
     "    avg_loss = total_loss / len(texts)\n",
     "    print(f\"Average Distillation Loss: {avg_loss:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "180091e7",
+   "metadata": {},
+   "source": [
+    "上面是直接进行加载dstill模型，下面要自己尝试进行distill操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4606658",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 - Loss: 0.7049428224563599\n",
+      "Epoch 2 - Loss: 0.6767551898956299\n",
+      "Epoch 3 - Loss: 0.5498147010803223\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 冻结和解冻BERT模型\n",
+    "import torch\n",
+    "from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "from torch.optim import AdamW\n",
+    "\n",
+    "# 加载预训练的BERT模型和分词器\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\")\n",
+    "\n",
+    "# 小数据进行单层微调\n",
+    "sentences = [\"The book is great!\", \"The movie was terrible.\"]\n",
+    "labels = [1, 0]  # 假设1代表积极，0代表消极\n",
+    "\n",
+    "# 数据预处理\n",
+    "inputs = tokenizer(sentences, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "\n",
+    "# 冻结所有BERT的层\n",
+    "for param in model.bert.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# 解冻特定的层\n",
+    "for param in model.bert.encoder.layer[-2:].parameters():\n",
+    "    param.requires_grad = True\n",
+    "\n",
+    "# 定义优化器，仅优化解冻层的参数\n",
+    "optimizer = AdamW(filter(lambda p: p.requires_grad, model.parameters()), lr=2e-5)\n",
+    "\n",
+    "# 训练过程示例\n",
+    "model.train()\n",
+    "for epoch in range(3):  # 训练3个周期\n",
+    "    outputs = model(**inputs, labels=torch.tensor(labels))\n",
+    "    loss = outputs.loss\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "    print(f\"Epoch {epoch+1} - Loss: {loss.item()}\")"
    ]
   }
  ],
