--- a/Jupyter/distill.ipynb
+++ b/Jupyter/distill.ipynb
@@ -2,163 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "acf524eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "239940322a0e429aa8e2aa10f03ea47d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66cb11e468184607a6c2d97360da07a4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62fa645018f441ab9737b30d50e6f31f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27f4a3cbbbde4b23850bc9ab911e44b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/268M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4e11b581f1949d59dd698ee3d9e6698",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4caedd8715d4a3b92db7bec5778da77",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b979cd016d6445c83fca4731067af8a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c26379efa44f68a4ebf53b2796ce4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "116e4e6546dc43979836936b1b232e83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47e4f14a18a84e56b17ab59e304f568c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distillation Loss: 0.06905972212553024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7890\"\n",
-    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7890\"\n",
+    "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7897\"\n",
+    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7897\"\n",
     "\n",
+    "# hugging-face 国内镜像源\n",
+    "os.environ['HF_ENDPOINT'] = 'https://hf-mirror.com'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72c26746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "from transformers import BertModel, DistilBertModel, DistilBertForQuestionAnswering\n",
     "from transformers import DistilBertTokenizer, BertTokenizer\n",
@@ -188,7 +51,7 @@
     "distillation_loss = nn.MSELoss()(student_outputs, teacher_outputs)\n",
     "\n",
     "# 打印蒸馏损失\n",
-    "print(\"Distillation Loss:\", distillation_loss.item())\n"
+    "print(\"Distillation Loss:\", distillation_loss.item())"
    ]
   },
   {
@@ -368,6 +231,258 @@
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    print(f\"Epoch {epoch+1} - Loss: {loss.item()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc497b7c",
+   "metadata": {},
+   "source": [
+    "下面对学习率设置进行学习：\n",
+    "学习率决定了梯度更新的步长，如何避免模型错过最优解"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8400eaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/3\n",
+      "Average training loss: 0.6955\n",
+      "\n",
+      "Epoch 2/3\n",
+      "Average training loss: 0.5635\n",
+      "\n",
+      "Epoch 3/3\n",
+      "Average training loss: 0.4875\n",
+      "\n",
+      "部分模型参数示例：\n",
+      "classifier.weight: tensor([[-0.0259, -0.0196, -0.0052,  ...,  0.0098,  0.0145, -0.0071],\n",
+      "        [ 0.0108,  0.0146,  0.0211,  ...,  0.0420, -0.0225,  0.0074]],\n",
+      "       grad_fn=<SliceBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import BertTokenizer, BertForSequenceClassification, get_linear_schedule_with_warmup\n",
+    "from torch.optim import AdamW\n",
+    "\n",
+    "# 加载数据集（示例数据）\n",
+    "data = [\n",
+    "    (\"The company posted a significant increase in quarterly revenue.\", 0),\n",
+    "    (\"New heart disease medication approved by FDA.\", 1),\n",
+    "    (\"Stock market affected by global events.\", 0),\n",
+    "    (\"Medical advancements in treating rare diseases.\", 1)\n",
+    "]\n",
+    "labels = [item[1] for item in data]\n",
+    "texts = [item[0] for item in data]\n",
+    "\n",
+    "# 实例化Tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "inputs = tokenizer(texts, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "\n",
+    "# 将标签转换为张量\n",
+    "labels_tensor = torch.tensor(labels)\n",
+    "\n",
+    "# 加载预训练的BERT模型并调整参数\n",
+    "model = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)\n",
+    "\n",
+    "# 将模型设置为训练模式\n",
+    "model.train()\n",
+    "\n",
+    "# 定义优化器和学习率调度器\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
+    "epochs = 3\n",
+    "total_steps = len(inputs[\"input_ids\"]) * epochs\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
+    "\n",
+    "# 将数据加载至DataLoader\n",
+    "train_data = DataLoader(list(zip(inputs[\"input_ids\"], inputs[\"attention_mask\"], labels_tensor)), batch_size=2)\n",
+    "\n",
+    "# 微调BERT模型\n",
+    "for epoch in range(epochs):\n",
+    "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
+    "    total_loss = 0\n",
+    "    for batch in train_data:\n",
+    "        input_ids, attention_mask, labels = batch\n",
+    "\n",
+    "        # 梯度清零\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # 前向传播，获取损失\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss = outputs.loss\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "        # 反向传播\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # 梯度裁剪，避免梯度爆炸\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "\n",
+    "        # 参数更新\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # 更新学习率\n",
+    "        scheduler.step()\n",
+    "\n",
+    "    avg_loss = total_loss / len(train_data)\n",
+    "    print(f\"Average training loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "# 测试阶段：打印模型参数信息\n",
+    "print(\"\\n部分模型参数示例：\")\n",
+    "for name, param in model.named_parameters():\n",
+    "    if \"classifier\" in name:\n",
+    "        print(f\"{name}: {param[:2]}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a688e417",
+   "metadata": {},
+   "source": [
+    "更加高级的微调方式，是对参数进行高效微调\n",
+    "[LoRA论文连接](https://arxiv.org/pdf/2106.09685)\n",
+    "[Pre-Tuning论文连接](https://arxiv.org/abs/2101.00190)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c97492d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'(MaxRetryError(\"HTTPSConnectionPool(host='hf-mirror.com', port=443): Max retries exceeded with url: /bert-base-uncased/resolve/main/tokenizer_config.json (Caused by ConnectTimeoutError(<HTTPSConnection(host='hf-mirror.com', port=443) at 0x768082c95640>, 'Connection to hf-mirror.com timed out. (connect timeout=10)'))\"), '(Request ID: c9cc11ad-a5f9-403f-917e-fbcee580f4c2)')' thrown while requesting HEAD https://hf-mirror.com/bert-base-uncased/resolve/main/tokenizer_config.json\n",
+      "Retrying in 1s [Retry 1/5].\n",
+      "'(MaxRetryError(\"HTTPSConnectionPool(host='hf-mirror.com', port=443): Max retries exceeded with url: /bert-base-uncased/resolve/main/tokenizer_config.json (Caused by ConnectTimeoutError(<HTTPSConnection(host='hf-mirror.com', port=443) at 0x768082c94b90>, 'Connection to hf-mirror.com timed out. (connect timeout=10)'))\"), '(Request ID: 7599ef6d-d70d-40b5-a8b9-c8933071e81e)')' thrown while requesting HEAD https://hf-mirror.com/bert-base-uncased/resolve/main/tokenizer_config.json\n",
+      "Retrying in 2s [Retry 2/5].\n",
+      "'(MaxRetryError('HTTPSConnectionPool(host=\\'hf-mirror.com\\', port=443): Max retries exceeded with url: /bert-base-uncased/resolve/main/tokenizer_config.json (Caused by NewConnectionError(\"HTTPSConnection(host=\\'hf-mirror.com\\', port=443): Failed to establish a new connection: [Errno 111] Connection refused\"))'), '(Request ID: 72a394d3-0153-4860-b8f6-0e40e37268ac)')' thrown while requesting HEAD https://hf-mirror.com/bert-base-uncased/resolve/main/tokenizer_config.json\n",
+      "Retrying in 4s [Retry 3/5].\n",
+      "'(MaxRetryError('HTTPSConnectionPool(host=\\'hf-mirror.com\\', port=443): Max retries exceeded with url: /bert-base-uncased/resolve/main/tokenizer_config.json (Caused by NewConnectionError(\"HTTPSConnection(host=\\'hf-mirror.com\\', port=443): Failed to establish a new connection: [Errno 111] Connection refused\"))'), '(Request ID: 2b8316b4-543d-4fc8-b5cc-02ffd935d64b)')' thrown while requesting HEAD https://hf-mirror.com/bert-base-uncased/resolve/main/tokenizer_config.json\n",
+      "Retrying in 8s [Retry 4/5].\n",
+      "'(MaxRetryError('HTTPSConnectionPool(host=\\'hf-mirror.com\\', port=443): Max retries exceeded with url: /bert-base-uncased/resolve/main/tokenizer_config.json (Caused by NewConnectionError(\"HTTPSConnection(host=\\'hf-mirror.com\\', port=443): Failed to establish a new connection: [Errno 111] Connection refused\"))'), '(Request ID: 0c93ac4c-3702-40f7-bd52-5d68eb4d59e2)')' thrown while requesting HEAD https://hf-mirror.com/bert-base-uncased/resolve/main/tokenizer_config.json\n",
+      "Retrying in 8s [Retry 5/5].\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.3534093499183655\n",
+      "Epoch 2, Loss: 0.2340371161699295\n",
+      "Epoch 3, Loss: 0.30949392914772034\n",
+      "Output Embeddings: tensor([[[-0.5007,  0.0067,  0.4987,  ..., -0.6998, -0.3988,  0.8621],\n",
+      "         [-0.3269,  0.9228, -0.1940,  ..., -0.4193,  0.0240,  0.1988],\n",
+      "         [-0.3774,  0.9690, -0.0234,  ..., -0.3832, -0.2031, -0.0308],\n",
+      "         ...,\n",
+      "         [-0.8675,  0.1132, -0.0237,  ..., -0.6927,  0.0622,  0.7820],\n",
+      "         [-0.7119,  0.6516,  0.4629,  ..., -0.1070,  0.0572,  0.9439],\n",
+      "         [-0.7524,  0.4928,  0.3584,  ..., -1.4589,  0.9578,  0.5290]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ['HF_ENDPOINT'] = 'https://hf-mirror.com'\n",
+    "\n",
+    "import torch\n",
+    "from transformers import BertTokenizer, BertModel\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "# 初始化BERT模型和tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = BertModel.from_pretrained(\"bert-base-uncased\")\n",
+    "\n",
+    "# 定义LoRA插入函数\n",
+    "class LoRA(nn.Module):\n",
+    "    def __init__(self, input_dim, rank):\n",
+    "        super(LoRA, self).__init__()\n",
+    "        # 定义低秩矩阵\n",
+    "        self.low_rank_left = nn.Parameter(torch.randn(input_dim, rank))# A\n",
+    "        self.low_rank_right = nn.Parameter(torch.randn(rank, input_dim))# B\n",
+    "        self.scaling_factor = 1.0 / (rank ** 0.5)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # 低秩矩阵的插入\n",
+    "        lora_update = torch.matmul(self.low_rank_left, self.low_rank_right) * self.scaling_factor\n",
+    "        return x + torch.matmul(x, lora_update)\n",
+    "\n",
+    "# 将LoRA应用到模型的encoder层\n",
+    "for layer in model.encoder.layer:\n",
+    "    layer.attention.self.query = LoRA(layer.attention.self.query.in_features, rank=8)\n",
+    "\n",
+    "# 定义Prefix Tuning类\n",
+    "class PrefixTuning(nn.Module):\n",
+    "    def __init__(self, model, prefix_length=10, hidden_size=768):\n",
+    "        super(PrefixTuning, self).__init__()\n",
+    "        # 创建前缀向量\n",
+    "        self.prefix_embeddings = nn.Parameter(torch.randn(prefix_length, hidden_size))\n",
+    "        self.prefix_length = prefix_length\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.model = model\n",
+    "\n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "        # 获取输入嵌入\n",
+    "        original_embeddings = self.model.embeddings(input_ids)\n",
+    "        \n",
+    "        # 将前缀添加到输入\n",
+    "        batch_size = input_ids.size(0)\n",
+    "        prefix_embeddings = self.prefix_embeddings.unsqueeze(0).expand(batch_size, -1, -1)\n",
+    "        modified_embeddings = torch.cat([prefix_embeddings, original_embeddings], dim=1)\n",
+    "        \n",
+    "        # 调整attention mask\n",
+    "        extended_attention_mask = torch.cat([torch.ones(batch_size, self.prefix_length).to(attention_mask.device), attention_mask], dim=1)\n",
+    "        return self.model(inputs_embeds=modified_embeddings, attention_mask=extended_attention_mask)\n",
+    "\n",
+    "# 将Prefix Tuning集成到BERT中\n",
+    "prefix_tuning = PrefixTuning(model)\n",
+    "optimizer = optim.Adam(prefix_tuning.parameters(), lr=1e-5)\n",
+    "\n",
+    "# 准备示例数据\n",
+    "text = \"LoRA and Prefix Tuning are efficient methods for adapting large models.\"\n",
+    "inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "input_ids = inputs[\"input_ids\"]\n",
+    "attention_mask = inputs[\"attention_mask\"]\n",
+    "\n",
+    "# 模型训练流程\n",
+    "prefix_tuning.train()\n",
+    "for epoch in range(3):  # 训练3个epoch\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = prefix_tuning(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "    last_hidden_states = outputs.last_hidden_state\n",
+    "    loss = (last_hidden_states ** 2).mean()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    print(f\"Epoch {epoch + 1}, Loss: {loss.item()}\")\n",
+    "\n",
+    "# 测试流程\n",
+    "prefix_tuning.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs = prefix_tuning(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "    print(\"Output Embeddings:\", outputs.last_hidden_state)\n",
+    "\n"
    ]
   }
  ],
