--- a/Jupyter/distill.ipynb
+++ b/Jupyter/distill.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c97492d1",
    "metadata": {},
    "outputs": [
@@ -483,6 +483,136 @@
     "    outputs = prefix_tuning(input_ids=input_ids, attention_mask=attention_mask)\n",
     "    print(\"Output Embeddings:\", outputs.last_hidden_state)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07dace8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from transformers import BertTokenizer, BertModel\n",
+    "\n",
+    "# 1. 设置环境与设备\n",
+    "os.environ['HF_ENDPOINT'] = 'https://hf-mirror.com'\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# 2. 定义 SVD-LoRA 层 (创新点：将权重分解为 P * Sigma * Q)\n",
+    "class SVDLoRALinear(nn.Module):\n",
+    "    def __init__(self, original_layer, rank=8, alpha=16):\n",
+    "        super().__init__()\n",
+    "        self.original_layer = original_layer\n",
+    "        self.original_layer.weight.requires_grad = False  # 冻结原参数\n",
+    "        \n",
+    "        out_features = original_layer.out_features\n",
+    "        in_features = original_layer.in_features\n",
+    "        \n",
+    "        # SVD 分解结构：Delta W = U * diag(S) * V\n",
+    "        self.U = nn.Parameter(torch.randn(out_features, rank) * 0.01)\n",
+    "        self.S = nn.Parameter(torch.ones(rank))  # 奇异值对角线\n",
+    "        self.V = nn.Parameter(torch.randn(rank, in_features) * 0.01)\n",
+    "        \n",
+    "        self.rank = rank\n",
+    "        self.scaling = alpha / rank\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # 原始权重路径\n",
+    "        original_output = self.original_layer(x)\n",
+    "        \n",
+    "        # SVD 旁路路径: x @ (V.T @ diag(S) @ U.T)\n",
+    "        # 优化计算顺序: (x @ V.T) * S @ U.T\n",
+    "        lora_output = (x @ self.V.t()) * self.S\n",
+    "        lora_output = lora_output @ self.U.t()\n",
+    "        \n",
+    "        return original_output + lora_output * self.scaling\n",
+    "\n",
+    "# 3. 定义集成模型 (Prefix-Tuning + SVD-LoRA)\n",
+    "class HybridSVDModel(nn.Module):\n",
+    "    def __init__(self, model_name=\"bert-base-uncased\", prefix_len=10, lora_rank=8):\n",
+    "        super().__init__()\n",
+    "        self.bert = BertModel.from_pretrained(model_name)\n",
+    "        self.prefix_len = prefix_len\n",
+    "        hidden_size = self.bert.config.hidden_size\n",
+    "        \n",
+    "        # 注入 SVD-LoRA 到所有 Query 和 Value 层\n",
+    "        for layer in self.bert.encoder.layer:\n",
+    "            layer.attention.self.query = SVDLoRALinear(layer.attention.self.query, rank=lora_rank)\n",
+    "            layer.attention.self.value = SVDLoRALinear(layer.attention.self.value, rank=lora_rank)\n",
+    "            \n",
+    "        # Prefix Embedding (连续向量)\n",
+    "        self.prefix_embedding = nn.Parameter(torch.randn(prefix_len, hidden_size))\n",
+    "        \n",
+    "        # 任务头 (以分类任务为例)\n",
+    "        self.classifier = nn.Linear(hidden_size, 2) \n",
+    "\n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "        batch_size = input_ids.shape[0]\n",
+    "        \n",
+    "        # 1. 处理 Prefix\n",
+    "        raw_embeds = self.bert.embeddings(input_ids)\n",
+    "        prefix_embeds = self.prefix_embedding.unsqueeze(0).expand(batch_size, -1, -1)\n",
+    "        inputs_embeds = torch.cat([prefix_embeds, raw_embeds], dim=1)\n",
+    "        \n",
+    "        # 2. 扩展 Attention Mask\n",
+    "        prefix_mask = torch.ones(batch_size, self.prefix_len).to(device)\n",
+    "        full_mask = torch.cat([prefix_mask, attention_mask], dim=1)\n",
+    "        \n",
+    "        # 3. 经过 BERT (含 LoRA 旁路)\n",
+    "        outputs = self.bert(inputs_embeds=inputs_embeds, attention_mask=full_mask)\n",
+    "        \n",
+    "        # 取 [CLS] token 的输出进行分类\n",
+    "        # 注意：由于加了 prefix，[CLS] 的位置现在在 index = self.prefix_len\n",
+    "        cls_output = outputs.last_hidden_state[:, self.prefix_len, :]\n",
+    "        return self.classifier(cls_output)\n",
+    "\n",
+    "# 4. 训练准备\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = HybridSVDModel().to(device)\n",
+    "\n",
+    "# 只优化 Prefix, LoRA 矩阵 和 Classifier\n",
+    "trainable_params = [\n",
+    "    {'params': [p for n, p in model.named_parameters() if 'U' in n or 'V' in n or 'S' in n or 'prefix' in n or 'classifier' in n]}\n",
+    "]\n",
+    "optimizer = optim.AdamW(trainable_params, lr=1e-4)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# 示例数据\n",
+    "texts = [\"The movie was fantastic!\", \"I hated this film.\"]\n",
+    "labels = torch.tensor([1, 0]).to(device)\n",
+    "inputs = tokenizer(texts, return_tensors=\"pt\", padding=True, truncation=True).to(device)\n",
+    "\n",
+    "# 5. 训练循环\n",
+    "print(\"Starting training...\")\n",
+    "model.train()\n",
+    "for epoch in range(10):\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    logits = model(inputs['input_ids'], inputs['attention_mask'])\n",
+    "    loss = criterion(logits, labels)\n",
+    "    \n",
+    "    # 创新点：添加奇异值稀疏化惩罚 (类似于 AdaLoRA 的正则项)\n",
+    "    # 强制模型只使用最重要的“秩”\n",
+    "    l1_reg = 0.0\n",
+    "    for n, p in model.named_parameters():\n",
+    "        if '.S' in n:\n",
+    "            l1_reg += torch.norm(p, 1)\n",
+    "    \n",
+    "    total_loss = loss + 0.01 * l1_reg\n",
+    "    \n",
+    "    total_loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    if (epoch + 1) % 2 == 0:\n",
+    "        print(f\"Epoch {epoch+1} | Loss: {loss.item():.4f} | Reg: {l1_reg.item():.4f}\")\n",
+    "\n",
+    "# 6. 观察奇异值 (模型解释性)\n",
+    "print(\"\\nTop 5 Singular Values in Layer 0 Query:\")\n",
+    "print(model.bert.encoder.layer[0].attention.self.query.S[:5].detach().cpu().numpy())"
    ]
   }
  ],
